# Bin_Packing_Problem

./: .gitignore  CMakeLists.txt  README.md  ci_cd.yml
Container/: CMakeLists.txt  Container.c  Container.h
Element/: CMakeLists.txt  Element.c  Element.h
Insertion/: CMakeLists.txt  Insertion.c  Insertion.h
Main/: CMakeLists.txt  main.c
Tests/: CMakeLists.txt
Tests/Insert_To_Container_1/: CMakeLists.txt  Insert_To_Container_1.c
